fixed spacing of elements

--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -26,9 +26,11 @@ h1 {
 }
 
 h2 {
+  font-size: 64px;
   font-weight: normal;
 }
 
+h3,
 h4 {
   font-size: 48px;
 }
@@ -39,48 +41,10 @@ p {
   line-height: 1.5;
 }
 
-footer {
-  margin: 60px 0;
-}
-
-footer .contact-box {
-  background: var(--secondary-color);
-  padding: 30px 60px;
-  border-radius: 10px;
-}
-
-footer .contact-box p {
-  margin: 0;
-}
-footer .email-link {
-  text-decoration: none;
-  color: black;
-  font-size: 24px;
-}
-
-footer .email-link:hover {
-  color: var(--branding-color);
-}
-
-footer .social-links a {
-  margin: 0 20px;
-  color: var(--branding-color);
-  background: var(--secondary-color);
-  padding: 10px 14px;
-  border-radius: 50%;
-  font-size: 18px;
-  transition: all 100ms ease-in-out;
-}
-
-footer .social-links a:hover {
-  color: white;
-  background: var(--branding-color);
-}
-
 .hero {
   background: var(--secondary-color);
   text-align: center;
-  padding: 160px 20px;
+  padding: 100px 20px;
 }
 
 .hero p {
@@ -88,6 +52,10 @@ footer .social-links a:hover {
   font-weight: bold;
   margin: 0;
   color: #272142;
+}
+
+.hero h1 {
+  font-size: 96px;
 }
 
 .hero h2 {
@@ -98,7 +66,7 @@ footer .social-links a:hover {
 }
 
 .content-container {
-  padding: 160px 20px;
+  padding: 60px 20px;
 }
 
 .content h1 {
@@ -140,7 +108,7 @@ footer .social-links a:hover {
 }
 
 .project-description {
-  padding: 120px 60px;
+  padding: 60px;
 }
 
 .active {
@@ -155,11 +123,50 @@ footer .social-links a:hover {
   color: var(--branding-color);
 }
 
+footer {
+  margin: 60px 0;
+}
+
+footer .contact-box {
+  background: var(--secondary-color);
+  padding: 30px 60px;
+  border-radius: 10px;
+}
+
+footer .contact-box p {
+  margin: 0;
+}
+footer .email-link {
+  text-decoration: none;
+  color: black;
+  font-size: 24px;
+}
+
+footer .email-link:hover {
+  color: var(--branding-color);
+}
+
+footer .social-links a {
+  margin: 0 20px;
+  color: var(--branding-color);
+  background: var(--secondary-color);
+  padding: 10px 14px;
+  border-radius: 50%;
+  font-size: 18px;
+  transition: all 100ms ease-in-out;
+}
+
+footer .social-links a:hover {
+  color: white;
+  background: var(--branding-color);
+}
+
 @media (max-width: 900px) {
   h1 {
     font-size: 44px;
     line-height: 1.5;
   }
+
   h2 {
     font-size: 36px;
     text-align: center;
@@ -182,6 +189,11 @@ footer .social-links a:hover {
 
   .hero {
     padding: 80px 20px;
+  }
+
+  .project-container {
+    margin-bottom: 0;
+    padding: 0;
   }
 
   .project-description {
